# nftpol

./: AGENTS.md  README.md  nftpol.conf.yml.example  pyproject.toml
nftpol/: cli.py  config.py  manager.py  nft.py  policy.py  renderer.py  resolver.py
systemd/: nftpol-refresh.service  nftpol-refresh.timer
templates/: 10-host.nft.j2  20-docker-isolation.nft.j2  nftables.conf.j2
tests/: test_config.py  test_host_sets.py  test_manager.py  test_policy.py  test_renderer.py  test_resolver.py
